# searchingforstrangeness

./: .build.sh  .checkjob.sh  .checkjobs.sh  .container.sh  .do_hadd.sh  .gitignore  .gridtoken.sh  .init_source.sh  .local.sh  .nohup.help  .nohup.txt  .pack_assets.sh  .prestage.sh  .prestage_detvar.sh  .process.sh  .project.py  .setup.sh  .submit.sh  .submit_selectionjobs.sh  .submit_weightjobs.sh  .tar.help  .tar.sh  .tar_uboone.sh  .test.sh  CMakeLists.txt  CheatingSignatureProducer_module.cc  ConvNetworkAlgorithm_module.cc  ConvolutionNetworkAlgo_module.cc  EventClassifier.h  EventGraph.txt  EventImageProducer_module.cc  EventSelectionFilter_module.cc  EventType.h  EventType.txt  FilterAggregatorProducer_module.cc  INCLUSIVE_STRANGENESS.md  INSTALL  Image.h  ImageAlgorithm.h  ImageAnalyser_module.cc  (+134 more)
.analysis/: FilePropertiesManager.hh  PlotUtils.hh  WeightHandler.hh  analyse.C  file_properties.txt
Analysis/: ImageProducts.h  SegmentationProducts.h  classes.h  classes_def.xml
AnalysisTools/: AnalysisToolBase.h  BackTrackedAnalysis_tool.cc  BacktrackerAnalysis_tool.cc  BlipAnalysis_tool.cc  CMakeLists.txt  CalorimetryAnalysis_tool.cc  ClassificationAnalysis_tool.cc  ClusterAnalysis_tool.txt  ComponentGraphAnalysis_tool.cc  DefaultAnalysis_tool.cc  EnergyAnalysis_tool.cc  EventCategoryAnalysis_tool.cc  EventCategoryAnalysis_tool.txt  EventWeightAnalysis_tool.cc  FlashAnalysis_tool.cc  GraphAnalysis_tool.cc  GraphEngine.cc  GraphEngine.h  HitImageAnalysis_tool.cc  ImageAnalysis_tool.cc  ImageGeneratorBase.h  ImageGenerator_tool.cc  InferenceTest_tool.txt  KaonShortAnalysis_tool.cxx  LambdaAnalysis_tool.cc  LambdaAnalysis_tool.cxx  LambdaSignalAnalysis_tool.cc  MetaAnalysis_tool.cc  NeutralDecayAnalysis_tool.cc  NeutrinoAnalysis_tool.cc  NeutrinoEnergyAnalysis_tool.cc  NeutrinoInteractionAnalysis_tool.cc  NuGraphAnalysis_tool.cc  PandoraSliceAnalysis_tool.cc  PandoraTrackAnalysis_tool.cc  PatternAnalysis_tool.cc  PreSelectionAnalysis_tool.cc  ReconstructionAnalysis_tool.cc  SecondaryVerticesAnalysis_tool.cc  ShowerAnalysis_tool.cc  (+18 more)
ClarityTools/: CMakeLists.txt  ChargedKaonSignatureIntegrity_tool.cc  ChargedSigmaSignatureIntegrity_tool.cc  ClarityTool.txt  ClarityToolBase.h  HitExclusivity_tool.cc  KPlusSignatureIntegrity_tool.cc  KShortSignatureIntegrity_tool.cc  KaonShortSignatureIntegrity_tool.cc  LambdaSignatureIntegrity_tool.cc  MuonSignatureIntegrity_tool.cc  PatternCompleteness_tool.cc  SignatureIntegrity.h  SignatureIntegrity_tool.cc
Common/: BacktrackingFuncs.h  BacktrackingUtilities.h  CalibrationFuncs.h  Containment.h  Descendents.h  EnergyCalibration.h  Geometry.h  GeometryUtils.h  GraphEngine.h  HitProximityClustering.h  Image.h  ImageAlgorithm.h  ImageTypes.h  LLRCorrectionLookup.h  LLRPIDCalculator.h  LLRPID_correction_lookup.h  LLRPID_proton_muon_lookup.h  LLRProtonMuonLookup.h  LLR_PID.h  NpyUtils.h  PFParticleDescendants.h  PIDFuncs.h  Pandora.h  PandoraUtilities.h  ParticleIdentifierUtils.h  ParticleScattering.h  PatternRecognitionUtils.h  ProximityClustering.h  ProxyTypes.h  Quantile.h  SCECorrections.h  Scatters.h  SpaceChargeCorrections.h  StatisticsQuantile.h  TrackShowerScore.h  TrackShowerScoreFuncs.h  TruthContainment.h  TruthLabelClassifier.h  Types.h
CommonDefs/: CalibrationFuncs.h  Centroid.h  Containment.h  Corrections.h  Descendents.h  Geometry.h  HitGeometry.h  Image.h  ImageAlgorithm.h  LLRPID_electron_photon_lookup.h  LLR_PID.h  PIDFuncs.h  Pandora.h  PrimaryLabels.h  ProximityClustering.h  ReconstructionLabels.h  Region.h  Scores.h  SemanticLabels.h  SliceProperties.h  TrackFitterFunctions.h  Types.h  Visualisation.h
CommonFuncs/: BackTrackingFuncs.h  Containment.h  Descendents.h  Geometry.h  PIDFuncs.h  PandoraFuncs.h  ProximityClustering.h  Scatters.h  SpaceChargeCorrections.h  TypeDefs.h
CommonFunctions/: Backtracking.h  BacktrackingFuncs.h  BadChannels.h  CMakeLists.txt  Calibration.h  Containment.h  Corrections.h  Descendents.h  Geometry.h  Pandora.h  PositionToWire.h  ProximityClustering.h  Region.h  Scatters.h  Visualisation.h
DataProducts/: ImageProducts.h  classes.h
Helpers/: CMakeLists.txt  HitProximityClustering.h  ParticleScattering.h  PatternRecognitionUtils.h  SpaceChargeCorrections.h
ImagePipeline/: CMakeLists.txt  Image.h  ImageCentering.cc  ImageCentering.h  ImageCentring.cc  ImageCentring.h  ImageFeaturesValidation.cc  ImageProduction.cc  ImageProduction.h  ImageWindowGeometry.cc  ImageWindowGeometry.h  InferenceConfiguration.cc  InferenceConfiguration.h  InferencePlaneTriplet.cc  InferencePlaneTriplet.h  InferenceProcess.cc  InferenceProcess.h  InferenceProduction.cc  InferenceProduction.h  InferenceProtocol.cc  InferenceProtocol.h  SemanticClassifier.cc  SemanticClassifier.h
Imaging/: CMakeLists.txt  Image.h  ImageAlgo.h  ImageCentering.h  ImageCorrections.h  ImageProducer.h  ImageProducer_module.cc  ImageProduction.h  InferenceEngine.h  InferenceProducer_module.cc  InferenceProduction.h  InferenceProduction_module.cc  SemanticClassifier.h  SemanticPixelClassifier.h  VertexDisplacementInference_module.cc
Macros/: event_dump.C
Products/: CMakeLists.txt  ImageFeatures.h  ImageProducts.h  InferenceMetrics.h  InferencePerf.h  InferencePred.h  (+8 more)
SelectionTools/: CMakeLists.txt  ChargeSelection_tool.cc  ContrastiveSelection_tool.cc  ContrastiveSelection_tool.txt  EmptySelection_tool.cc  FiducialSelection_tool.cc  FiducialVolumeSelecion_tool.cc  FiducialVolumeSelection_tool.cc  HoughTransformSelection_tool.cc  ImageSelection_tool.cc  NeutralDecaySelection_tool.cc  NeutrinoSelection_tool.cc  NuMuSelection_tool.cc  PreSelection_tool.cc  SelectionToolBase.h  StrangenessEmptySelection_tool.cc  StrangenessSelection_tool.cc  TopologySelection_tool.cc  TruthBackgroundSelection_tool.cc  TruthSignalSelection_tool.cc
SelectionTools/ConvolutionNetwork/: CMakeLists.txt  setup.sh
_analysis/: .build.help  Analysis.cpp  AnalysisConfig.h  CMakeLists.txt  DataLoader.h  DataSaver.h  Display.hh  EventCategories.h  EventCategory.hh  FilePropertiesManager.hh  HistogramPlotter.h  LinkDef.h  Selections.h  TreeUtils.hh  effpur.C
(+455 files in other folders)
